# RAG_Pipeline_Project

./: .env.template  .gitignore  Dockerfile  HYBRID_RRF_DEFAULTS.md  LICENSE  LOCAL_CROSS_ENCODER_RERANKER.md  RAG_NHS.tex  RAG_Poster.tex  README.md  README_UI.md  SPLADE_ABLATION.md  TUNING_DOCUMENT_REGISTRY.md  ablation_steps_summary.csv  ablation_steps_summary.md  attention_heads_explainer_slide.html  build_index.py  chunking_strategy_slide.html  chunking_strategy_slide.md  citation_validation_slide.html  citation_validation_slide.md  citation_validation_slide_compact.html  citation_validation_slide_compact.md  docker-compose.override.yml  docker-compose.yml  environment.yml  faiss_smoke.py  flowchart.html  flowchart.md  fusion_depth_slide.html  fusion_depth_slide.md  generation_context_limits_diagram.html  generation_context_limits_diagram.md  global_id_alignment_slide.html  global_id_alignment_slide.md  inspect_section.py  make_charts.py  make_titles_before_after.py  pipeline_function_map.csv  pipeline_function_map.md  preprocess_hybrid.py  (+25 more)
Experiment/: QAQC_2022-2023.ipynb
config/: batch.example.json
configs/: intrinsic_ablation_preliminary.yaml  retrieval_tuning.yaml  retrieval_tuning_224_56_5docs.yaml  retrieval_tuning_minilm_cap_5docs.yaml  retrieval_tuning_splade_template.yaml  retrieval_tuning_thesis.yaml  retrieval_tuning_thesis_5docs_q50.yaml  retrieval_tuning_thesis_all_docs.yaml  thesis_rag.yaml  thesis_rag_smoke.yaml
data_processed_tiktoken_all_docs_224_56/: retrieval_failure_summary.csv  retrieval_queries_report.csv  retrieval_queries_report.md  (+5 more)
(+3124 files in other folders)
